--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -86,6 +86,9 @@ h1 {
   font-family: "Great Vibes", "Open Sans", sans-serif;
   font-size: 5.5rem;
 }
+.font-middle-earth-joanna-vu {
+  font-family: "MiddleEarth JoannaVu", "Great Vibes", "Open Sans", sans-serif
+}
 </style>
 
 
