--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -78,7 +78,7 @@
   text-decoration: underline;  /* Underline on hover */
 }
 
-/* Fonts */
+/** ======== Fonts ========= */
 .great-vibes {
   font-family: "Great Vibes", cursive;
 }
@@ -89,6 +89,15 @@ h1 {
 .font-middle-earth-joanna-vu {
   font-family: "MiddleEarth JoannaVu", "Great Vibes", "Open Sans", sans-serif
 }
+
+/** ======== TikZJax ========= */
+/* https://github.com/kisonecat/tikzjax/issues/12 */
+.tikzjax {
+  display: flex;
+  justify-content: center; /* centers horizontally */
+  align-items: center;     /* centers vertically if needed */
+}
+
 </style>
 
 
@@ -120,16 +129,42 @@ h1 {
 {{ end }}
 
 <!-- MathJax Support -->
+<!-- https://docs.mathjax.org/en/latest/options/input/tex.html -->
 <script>
-MathJax = {
+window.MathJax = {
   tex: {
     inlineMath: [['$', '$'], ['\\(', '\\)']],
-    displayMath: [['$$', '$$'], ['\\[', '\\]']]
+    displayMath: [['$$', '$$'], ['\\[', '\\]']],
+    processEscapes: true,
+    processEnvironments: true,
+    packages: {'[+]': ['ams', 'boldsymbol']}  // 'base' + extras
   },
-  svg: {
-    fontCache: 'global'
+  options: {
+    skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code'],
+    ignoreHtmlClass: 'tex2jax_ignore|tikz-container'
+  },
+  loader: {
+    load: ['[tex]/ams', '[tex]/boldsymbol']
+  },
+  startup: {
+    ready() {
+      console.log('MathJax is initializing...');
+      MathJax.startup.defaultReady();
+      MathJax.startup.promise.then(() => {
+        console.log('MathJax typesetting complete');
+      }).catch((err) => {
+        console.error('MathJax failed:', err);
+      });
+    }
   }
 };
 </script>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<!-- Only include polyfill if supporting older browsers -->
+<script src="https://cdn.jsdelivr.net/npm/core-js-bundle@3/minified.js"></script>
+<!-- https://www.mathjax.org/#gettingstarted -->
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4.0.0/tex-mml-chtml.js"></script>
+
+<!-- TikZJax -->
+<!-- https://github.com/kisonecat/tikzjax -->
+<link rel="stylesheet" type="text/css" href="http://tikzjax.com/v1/fonts.css">
+<script src="https://tikzjax.com/v1/tikzjax.js"></script>
