fix(blogs/latex_for_webdev): fill color in TikZ-nodes

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -168,3 +168,7 @@ window.MathJax = {
 <!-- https://github.com/kisonecat/tikzjax -->
 <link rel="stylesheet" type="text/css" href="http://tikzjax.com/v1/fonts.css">
 <script src="https://tikzjax.com/v1/tikzjax.js"></script>
+
+<!-- TikZJax-node -->
+{{ $js := resources.Get "js/tikzjax-node.js" | minify | fingerprint }}
+<script src="{{ $js.RelPermalink }}" integrity="{{ $js.Data.Integrity }}" defer></script>
