--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -166,7 +166,7 @@ window.MathJax = {
 
 <!-- TikZJax -->
 <!-- https://github.com/kisonecat/tikzjax -->
-<link rel="stylesheet" type="text/css" href="http://tikzjax.com/v1/fonts.css">
+<link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">
 <script src="https://tikzjax.com/v1/tikzjax.js"></script>
 
 <!-- TikZJax-node -->
