--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -111,6 +111,13 @@ h1 {
 details.table-of-contents-all-bold-but-summary > :not(summary) {
   font-weight: bold;
 }
+
+
+/** ======== Bloquotes alerts ========= */
+/* /blogs/hugo_render_hooks.md */
+blockquote.alert-caution *:not(p:first-of-type) {
+  color: red;
+}
 </style>
 
 
