fix: R content/en/leaf_bundle_to_layout/post_1.md -> content-1.md
Content-1.md is a page resourece in a leaf bundle.
Its content will be a section of public/leaf_bundle_to_layout/index.html
thus is clearer to call it content-1.md, than post_1.md because normally
a post its hold in a [isolated] single page (rendered by
layouts/_default/single.html), one does not think of a whole posts being
just a section of a website.

--- a/layouts/leaf_bundle_to_layout/single.html
+++ b/layouts/leaf_bundle_to_layout/single.html
@@ -26,7 +26,7 @@
     </article>
 
     {{/* Render the resource's content directly */}}
-    {{ $subpage := .Resources.Get "post_1.md" }}
+    {{ $subpage := .Resources.Get "content-1.md" }}
     {{ if $subpage }}
       <article class="post page">
          <h2>{{ $subpage.Title }}</h2>
@@ -41,7 +41,7 @@
          {{ end }}
       </article>
     {{ else }}
-      <p>Debug: Resource 'post_1.md' not found.</p>
+      <p>Debug: Resource 'content-1.md' not found.</p>
     {{ end }}
 
   </main>
